# govee-smartplug-monitor

./: .gitignore  cli.py  pyproject.toml  readme.md
