[project]
name = "govee_smartplug_monitor"
version = "0.1.0"
description = "Default template for PDM package"
requires-python = "==3.13.*"
dependencies = [
    "requests",
]
authors = [
    {name = "James Westover", email = "james@westover.dev"},
]
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
config = "python cli.py config"
check = "python cli.py check"
run = { cmd = "python cli.py run"}

[tool.pdm.scripts.generate-systemd]
cmd = "python cli.py generate-systemd"

[tool.pdm.scripts.install-systemd]
cmd = "python cli.py generate-systemd"

[tool.pdm.scripts.logs-systemd]
cmd = "journalctl -u govee-monitor.service -f"

[tool.pdm.scripts.restart-systemd]
cmd = "sudo systemctl restart govee-monitor.service"

[tool.pdm.scripts.test-pushcut]
cmd = "python cli.py test-pushcut"
